# MindMate_Server

./: .gitignore  child_face.pkl  client.py  client1.py  client2.py  main.py  pyproject.toml  register_child.py  serevr2.py  server.py  server1.py  test.py
client/: client.py  utils.py
server/: server.py
test/esp/: config.json  esp.ino  test_esp.py
