[project]
name = "mindmate-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "face-recognition>=1.3.0",
    "gtts>=2.5.4",
    "opencv-python>=4.13.0.92",
    "pygame>=2.6.1",
    "requests>=2.34.2",
    "scipy>=1.15.3",
    "sounddevice>=0.5.5",
]
